--- a/ELEC3850 Project/ELEC3850 Project.ioc
+++ b/ELEC3850 Project/ELEC3850 Project.ioc
@@ -1,24 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ContinuousConvMode=ENABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=ADC1
-Dma.RequestsNb=1
 File.Version=6
 I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
 I2S3.ErrorAudioFreq=-2.34 %
@@ -31,16 +11,16 @@ I2S3.RealAudioFreq-Half_Duplex_Master=96.774 KHz
 I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=ADC1
-Mcu.IP1=DMA
+Mcu.IP0=I2C1
+Mcu.IP1=I2S3
 Mcu.IP10=USB_DEVICE
 Mcu.IP11=USB_OTG_FS
-Mcu.IP2=I2C1
-Mcu.IP3=I2S3
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
 Mcu.IP8=TIM3
 Mcu.IP9=TIM4
 Mcu.IPNb=12
@@ -48,50 +28,55 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB2
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB2
+Mcu.Pin13=PE9
 Mcu.Pin14=PB10
-Mcu.Pin15=PD12
-Mcu.Pin16=PD13
-Mcu.Pin17=PD14
-Mcu.Pin18=PD15
-Mcu.Pin19=PC7
+Mcu.Pin15=PD9
+Mcu.Pin16=PD10
+Mcu.Pin17=PD11
+Mcu.Pin18=PD12
+Mcu.Pin19=PD13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PC10
-Mcu.Pin27=PC12
-Mcu.Pin28=PD4
-Mcu.Pin29=PD5
+Mcu.Pin20=PD14
+Mcu.Pin21=PD15
+Mcu.Pin22=PC7
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PA15
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB6
-Mcu.Pin32=PB9
-Mcu.Pin33=PE1
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PC10
+Mcu.Pin31=PC12
+Mcu.Pin32=PD4
+Mcu.Pin33=PD5
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB9
+Mcu.Pin37=PE1
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA4
-Mcu.PinsNb=38
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -110,7 +95,6 @@ PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
-PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Label=OTG_FS_ID
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -144,6 +128,7 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Signal=S_TIM2_CH1_ETR
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
@@ -271,6 +256,14 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=APIN
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=BPIN
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD12.Locked=true
 PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -303,6 +296,8 @@ PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
 PD5.Signal=GPIO_Input
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
@@ -315,6 +310,7 @@ PE3.GPIO_PuPd=GPIO_NOPULL
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0-OSC_IN.Locked=true
@@ -352,7 +348,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -385,12 +381,14 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
@@ -400,6 +398,14 @@ SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Du
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM1.Period=2000-1
+TIM1.Prescaler=1080
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.Period=2000-1
+TIM2.Prescaler=1080
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
 TIM4.Period=2000-1
@@ -413,6 +419,10 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
