--- a/ELEC3850 Project/ELEC3850 Project.ioc
+++ b/ELEC3850 Project/ELEC3850 Project.ioc
@@ -28,49 +28,52 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB2
-Mcu.Pin13=PE9
-Mcu.Pin14=PB10
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PD11
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB2
+Mcu.Pin14=PE9
+Mcu.Pin15=PE11
+Mcu.Pin16=PB10
+Mcu.Pin17=PD9
+Mcu.Pin18=PD10
+Mcu.Pin19=PD11
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD14
-Mcu.Pin21=PD15
-Mcu.Pin22=PC7
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
+Mcu.Pin20=PD12
+Mcu.Pin21=PD13
+Mcu.Pin22=PD14
+Mcu.Pin23=PD15
+Mcu.Pin24=PC7
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PC10
-Mcu.Pin31=PC12
-Mcu.Pin32=PD4
-Mcu.Pin33=PD5
-Mcu.Pin34=PB3
-Mcu.Pin35=PB6
-Mcu.Pin36=PB9
-Mcu.Pin37=PE1
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=PA14
+Mcu.Pin31=PA15
+Mcu.Pin32=PC10
+Mcu.Pin33=PC12
+Mcu.Pin34=PD4
+Mcu.Pin35=PD5
+Mcu.Pin36=PB3
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin39=PB9
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PE1
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=44
+Mcu.Pin8=PA1
+Mcu.Pin9=PA4
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -95,6 +98,7 @@ PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
+PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Label=OTG_FS_ID
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -192,6 +196,8 @@ PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PB9.GPIO_Mode=GPIO_MODE_AF_OD
@@ -304,6 +310,7 @@ PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPXTI1
+PE11.Signal=S_TIM1_CH2
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PE3.GPIO_PuPd=GPIO_NOPULL
@@ -348,7 +355,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -387,10 +394,16 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -399,18 +412,24 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
-TIM1.Period=2000-1
-TIM1.Prescaler=1080
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-PWM Generation2 CH2,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
+TIM1.Period=100-1
+TIM1.Prescaler=168-1
+TIM1.Pulse-PWM\ Generation1\ CH1=30
+TIM1.Pulse-PWM\ Generation2\ CH2=90
+TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM2.Period=2000-1
 TIM2.Prescaler=1080
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM4.Period=2000-1
-TIM4.Prescaler=1080-1
-TIM4.Pulse-PWM\ Generation1\ CH1=2399
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2
+TIM4.Period=100-1
+TIM4.Prescaler=168-1
+TIM4.Pulse-PWM\ Generation1\ CH1=30
+TIM4.Pulse-PWM\ Generation2\ CH2=90
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
@@ -431,4 +450,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=STM32F4DISCOVERY
 boardIOC=true
-isbadioc=false
+isbadioc=true
