--- a/ELEC3850 Project/ELEC3850 Project.ioc
+++ b/ELEC3850 Project/ELEC3850 Project.ioc
@@ -28,52 +28,53 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB2
-Mcu.Pin14=PE9
-Mcu.Pin15=PE11
-Mcu.Pin16=PB10
-Mcu.Pin17=PD9
-Mcu.Pin18=PD10
-Mcu.Pin19=PD11
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB2
+Mcu.Pin13=PE9
+Mcu.Pin14=PE11
+Mcu.Pin15=PB10
+Mcu.Pin16=PD9
+Mcu.Pin17=PD10
+Mcu.Pin18=PD11
+Mcu.Pin19=PD12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD12
-Mcu.Pin21=PD13
-Mcu.Pin22=PD14
-Mcu.Pin23=PD15
-Mcu.Pin24=PC7
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA11
-Mcu.Pin28=PA12
-Mcu.Pin29=PA13
+Mcu.Pin20=PD13
+Mcu.Pin21=PD14
+Mcu.Pin22=PD15
+Mcu.Pin23=PC7
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA14
-Mcu.Pin31=PA15
-Mcu.Pin32=PC10
-Mcu.Pin33=PC12
-Mcu.Pin34=PD4
-Mcu.Pin35=PD5
-Mcu.Pin36=PB3
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PB9
+Mcu.Pin30=PA15
+Mcu.Pin31=PC10
+Mcu.Pin32=PC12
+Mcu.Pin33=PD4
+Mcu.Pin34=PD5
+Mcu.Pin35=PB3
+Mcu.Pin36=PB4
+Mcu.Pin37=PB5
+Mcu.Pin38=PB6
+Mcu.Pin39=PB7
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PE1
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PB9
+Mcu.Pin41=PE1
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin47=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA4
-Mcu.PinsNb=47
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -98,7 +99,6 @@ PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
-PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Label=OTG_FS_ID
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -188,6 +188,16 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4.GPIO_Label=Reverse
+PB4.GPIO_PuPd=GPIO_PULLDOWN
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB5.GPIO_Label=Stop
+PB5.GPIO_PuPd=GPIO_PULLDOWN
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB6.GPIO_Label=Audio_SCL [CS43L22_SCL]
 PB6.GPIO_Mode=GPIO_MODE_AF_OD
@@ -398,8 +408,6 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
-SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
@@ -418,11 +426,10 @@ TIM1.Period=100-1
 TIM1.Prescaler=168-1
 TIM1.Pulse-PWM\ Generation1\ CH1=30
 TIM1.Pulse-PWM\ Generation2\ CH2=90
-TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-Input_Capture2_from_TI2
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM2.Period=2000-1
-TIM2.Prescaler=1080
+TIM2.Prescaler=540
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2
@@ -450,4 +457,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=STM32F4DISCOVERY
 boardIOC=true
-isbadioc=true
+isbadioc=false
